<resources>
    <string name="app_name">Hello Android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="greeting2">Hi there</string>
    <string name="hallo">Du Hörensohn</string>
    <string name="name">Nombre: </string>
    <string name="get_name">Digite nombre</string>
    <string name="email">Correo: </string>
    <string name="get_email">Digite e-mail</string>
    <string name="tel">Teléfono: </string>
    <string name="get_tel">Digite teléfono</string>
    <string name="ok">OK</string>
    <string name="sexo">Sexo: </string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="city">Ciudad: </string>
    <string name="date">Fecha Nacimiento: </string>
    <string name="citys_prompt">Elija una ciudad</string>
    <string-array name="citys_prot">
        <item>Medellin</item>
        <item>Cali</item>
        <item>Bogotá</item>
        <item>Barranquilla</item>
        <item>Pasto</item>
        <item>Leticia</item>
        <item>San Andres</item>
        <item>Guajira</item>
    </string-array>
</resources>